force-app/main/default/objects/Contact_Task_Assignment__c/Contact_Task_Assignment__c.object-meta.xml
<CustomObject>
    <label>Contact Task Assignment</label>
    <nameField>
        <displayFormat>CTA-{0000}</displayFormat>
        <label>Contact Task Assignment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Task Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>