force-app/main/default/objects/Contact_Task_Assignment__c/fields/Associated_Program__c.field-meta.xml
<CustomField>
    <fullName>Associated_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Program</label>
    <referenceTo>Training_Program__c</referenceTo>
    <relationshipLabel>Contact Task Assignments</relationshipLabel>
    <relationshipName>Contact_Task_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>