force-app/main/default/objects/Contact_Task_Assignment__c/fields/Due_Day__c.field-meta.xml
<CustomField>
    <fullName>Due_Day__c</fullName>
    <inlineHelpText>By which day in the training schedule should the employee complete this task?</inlineHelpText>
    <label>Due Day</label>
    <type>Date</type>
</CustomField>