force-app/main/default/objects/Contact_Task_Assignment__c/fields/Expected_Time_To_Complete__c.field-meta.xml
<CustomField>
    <fullName>Expected_Time_To_Complete__c</fullName>
    <formula>TEXT( FLOOR( Training_Task__r.Expected_Duration_In_Minutes__c  / 60) ) &amp; &quot;H &quot; &amp; TEXT(MOD( Training_Task__r.Expected_Duration_In_Minutes__c ,60)) &amp; &quot;M&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Time To Complete</label>
    <type>Text</type>
</CustomField>