force-app/main/default/objects/Contact_Task_Assignment__c/fields/Time_Taken__c.field-meta.xml
<CustomField>
    <fullName>Time_Taken__c</fullName>
    <formula>TEXT( FLOOR(Time_Taken_In_Minutes__c / 60) ) &amp; &quot;H &quot; &amp; TEXT(MOD(Time_Taken_In_Minutes__c,60)) &amp; &quot;M&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Taken</label>
    <type>Text</type>
</CustomField>