force-app/main/default/objects/Contact_Task_Assignment__c/fields/Time_Taken_In_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Time_Taken_In_Minutes__c</fullName>
    <label>Time Taken In Minutes</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>