force-app/main/default/objects/Contact_Task_Assignment__c/fields/Training_Task__c.field-meta.xml
<CustomField>
    <fullName>Training_Task__c</fullName>
    <label>Training Task</label>
    <referenceTo>Training_Task__c</referenceTo>
    <relationshipLabel>Associated Contacts</relationshipLabel>
    <relationshipName>Contact_Task_Assignments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>