force-app/main/default/objects/Contact_Task_Assignment__c/recordTypes/Contact_Task_Assignment_Employees.recordType-meta.xml
<RecordType>
    <fullName>Contact_Task_Assignment_Employees</fullName>
    <active>true</active>
    <label>Contact Task Assignment Employees</label>
</RecordType>