force-app/main/default/objects/Contact_Task_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Training_Task__c</columns>
    <columns>Contact__c</columns>
    <columns>Time_Taken__c</columns>
    <columns>Due_Day__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>